--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Git & Github Workshop</title>
+        <title>First attempt</title>
     </head>
     <body>
         <h1>My First Html Project</h1>
